...
    if (ModalRoute.of(context)?.isCurrent == false) return;

    _active = TutorialCoachMark(
      targets: targets,
      colorShadow: const Color(0xFF1A1A1A),
      opacityShadow: 0.9,
      textSkip: "SKIP",
      textStyleSkip: const TextStyle(
        color: Colors.white70,
        fontSize: 16,
        fontWeight: FontWeight.w500,
        fontFamily: 'Poppins',
      ),
...
